<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/background"
    tools:context="com.sevenhourdev.getlyric.AddToLibrary">

    <LinearLayout
        android:paddingTop="@dimen/abs__action_bar_icon_vertical_padding"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:paddingBottom="@dimen/abs__action_bar_icon_vertical_padding"
        android:id="@+id/linearLayout"
        android:divider="#FF2b3f4c"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/edit1"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/search_length"
            android:hint="@string/edit1"
            android:textColor="#ffffffff" />

        <EditText
            android:id="@+id/edit2"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/search_length"
            android:hint="@string/edit2"
            android:focusableInTouchMode="true"
            android:layout_gravity="center"
            android:textColor="#ffffffff" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="@dimen/search_length"
            android:textSize="14sp"
            android:text="@string/button1"
            android:onClick = "sendInfo"
            android:layout_gravity="center"
            android:textColor="#ffffffff"/>
    </LinearLayout>

</RelativeLayout>
