<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="false"
    tools:context="com.example.myfirstapp.MainActivity"
    android:background="#FF2b3f4c"
    tools:ignore="MergeRootFrame" >

    <ListView
        android:id="@+id/wow_songs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:background="#FF2b3f4c"

        android:smoothScrollbar="true">
    </ListView>
    <LinearLayout
        android:paddingTop="@dimen/abs__action_bar_icon_vertical_padding"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/abs__action_bar_icon_vertical_padding"
        android:id="@+id/linearLayout"
        android:background="#FF2b3f4c"
        android:divider="#FF2b3f4c">

        <EditText
            android:id="@+id/edit1"
            android:layout_weight="19"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/search_length"
            android:hint="@string/edit1"
            android:textColor="#ffffffff" />

        <EditText
            android:id="@+id/edit2"
            android:layout_weight="19"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/search_length"
            android:hint="@string/edit2"
            android:focusableInTouchMode="true"
            android:layout_gravity="center"
            android:textColor="#ffffffff" />

        <Button
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="@dimen/search_length"
            android:textSize="14sp"
            android:text="@string/button1"
            android:onClick = "sendInfo"
            android:layout_gravity="center"
            android:textColor="#ffffffff"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:background="@drawable/splash"
        style="@style/splash_screen" />
    <TextView
        android:text="LOADING LIBARY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"/>


</RelativeLayout>

